fix: Align additional text

--- a/sass/base/components/form/_standard-form.scss
+++ b/sass/base/components/form/_standard-form.scss
@@ -263,6 +263,10 @@ label {
   label.form__checkbox {
     font-weight: normal;
   }
+  
+  .form__field-additional-text div {
+    margin-left: 45px;
+  }
 }
 
 /* Checkbox with paragraph and label included */
